  (#3876 - Matthieu Casanova)

- Bugfix in EditPane.java related to file status checks.
  (Patch #534 - Matt Galligan)

- Fix for bug #3389 in BufferSwitcher.java where look and feel was locked to
  Metal. (Dale Anson)

- Fix for bug #3893 where PluginResURLConnection.openStream returning null for
  non existing resources made jEdit hang on Java 8, Mac OS 10.10. (Eric Le Lay)

}}}
{{{ Miscellaneous
- MiscUtilities.openInDesktop() works with URIs on Windows now. (Alan Ezust)

}}}
{{{ API Changes

- DockableWindowContainer interface is now public (Patch #528 - Makarius)

- PluginResURLConnection.openStream() is garanteed to return non-null stream;
  PluginResURLConnection.connect() and PluginResURLConnection.openStream()
  throw an IOException when the resource is not found.

}}}
{{{ Editing


}}}

}}}

{{{ Version 5.2pre1

Thanks to Björn "Vampire" Kautler, Matthieu Casanova, Dale Anson, Thomas Meyer,
Patrick Eibl, László Schmidt, Zsombor Franczia, Bence Pintér, Makarius,
Benjamin Zengin, Yihua Zhang, Marc Häfner, EdorFaus, Jordan Miner,
Thiemo Kellner, Tim Blackler, Alan Ezust, and Eric Le Lay for contributing to
this release.

{{{ Bug Fixes

- Fix for bug #3843: Russian localization breaks Search dialog

- Fixed Whole word search (bug #3824, patch #516 - Benjamin Zengin)

- Fixed the systray not added on EDT thread (Matthieu Casanova)

- Fix the integration with Unity and other Linux Desktop Environments,
  broken by patch #464 (Björn "Vampire" Kautler)

- Reload optionally dependent plugins when a plugin is unloaded.
  (bug #3807 - Dale Anson)

- Applied patch #513 (Makarius), plus some additional cleanup of setting
  the look and feel (Dale Anson)

- Fixed a bug in pluginmanager: transitive deps not installed when filtering
  (bug #3825 - Eric Le Lay)

- Fix java installer bug: Installing from jedit5.1.0install.jar failure
  (bug #3837 - Eric Le Lay)

}}}
{{{ API Changes

- jEdit now depends on Java 1.7
